<resources>
    <string name="app_name">Contoso University</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navdrawer_label_departments">Departments</string>
    <string name="navdrawer_label_instructors">Instructors</string>
    <string name="navdrawer_label_courses">Courses</string>
    <string name="navdrawer_label_students">Students</string>
    <string name="navdrawer_label_about">About</string>
    <string name="navdrawer_label_home">Home</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

</resources>
